exports[`phantomjs catch 0 errors 1`] = `
Object {
  "driverType": "phantomjs",
  "errors": Array [],
}
`;

exports[`phantomjs catch 0 errors to stdout json 1`] = `
Object {
  "driverType": "phantomjs",
  "errors": Array [],
}
`;

exports[`phantomjs catch 1 errors 1`] = `
Object {
  "driverType": "phantomjs",
  "errors": Array [
    Object {
      "level": "SEVERE",
      "message": "A regular console.error
  error (:0)",
    },
  ],
}
`;

exports[`phantomjs catch 1 errors to stdout json 1`] = `
Object {
  "driverType": "phantomjs",
  "errors": Array [
    Object {
      "level": "SEVERE",
      "message": "A regular console.error
  error (:0)",
    },
  ],
}
`;

exports[`phantomjs option run a custom async script with webdriver calls 1`] = `
Object {
  "driverType": "phantomjs",
  "errors": Array [],
}
`;

exports[`phantomjs option waitFor 1`] = `
Object {
  "driverType": "phantomjs",
  "errors": Array [],
}
`;

exports[`phantomjs option waitForExist with a throw just after 1`] = `
Object {
  "driverType": "phantomjs",
  "errors": Array [
    Object {
      "level": "SEVERE",
      "message": "wow
  (anonymous function) (http://127.0.1.1:9999/wait-for-throws:14)",
    },
  ],
}
`;
